infra/k8s/minio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: amfit
  labels:
    app.kubernetes.io/name: "minio"
    app.kubernetes.io/component: "storage"
    app.kubernetes.io/managed-by: "argocd"
    environment: "dev"
    lab_id: "lab-k8s-01"
    lab_owner: "jose.mussauer"
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: "minio"
  ports:
    - name: api
      port: 9000
      targetPort: 9000
      protocol: TCP
    - name: console
      port: 9001
      targetPort: 9001
      protocol: TCP
