infra/k8s/minio/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: minio-console
  namespace: amfit
  labels:
    app.kubernetes.io/name: "minio"
    app.kubernetes.io/component: "storage"
    app.kubernetes.io/managed-by: "argocd"
    environment: "dev"
    lab_id: "lab-k8s-01"
    lab_owner: "jose.mussauer"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`minio.amfit.local`)
      kind: Rule
      services:
        - name: minio
          port: 9001
  tls: {}
